exam00/only_z/0-0-only_z.trace.txt
= Host-specific information ====================================================
$> hostname; uname -msr
e1z1r7p5.42.us.org
Darwin 17.4.0 x86_64
$> date
Fri Sep 21 18:26:47 PDT 2018
$> gcc --version
Configured with: --prefix=/Library/Developer/CommandLineTools/usr --with-gxx-include-dir=/usr/include/c++/4.2.1
Apple LLVM version 9.0.0 (clang-900.0.39.2)
Target: x86_64-apple-darwin17.4.0
Thread model: posix
InstalledDir: /Library/Developer/CommandLineTools/usr/bin
$> clang --version
Apple LLVM version 9.0.0 (clang-900.0.39.2)
Target: x86_64-apple-darwin17.4.0
Thread model: posix
InstalledDir: /Library/Developer/CommandLineTools/usr/bin

= User files collection ========================================================
Collecting user files from Vogsphere
Repository URL: auto-exam/2018/piscine-c-exam00/exam_20180922/kchenna

= Git history ==================================================================
$> git -C /var/folders/1g/tx_70lqd2d37pp6ry1fbbqnr0000gp/T/tmpL4Ca6L/user log --pretty='%H - %an, %ad : %s'
0841868fd843c86ed2b0d841d4afd0da40ec56e5 - Exam 42, Fri Sep 21 18:24:49 2018 -0700 : only_z
 
= Collected files ==========================================
$> ls -lAR /var/folders/1g/tx_70lqd2d37pp6ry1fbbqnr0000gp/T/tmpL4Ca6L/user
total 8
-rw-r--r--  1 deepthought  deepthought  219 Sep 21 18:26 __GIT_HISTORY
drwxr-xr-x  3 deepthought  deepthought  102 Sep 21 18:26 only_z

/var/folders/1g/tx_70lqd2d37pp6ry1fbbqnr0000gp/T/tmpL4Ca6L/user/only_z:
total 8
-rw-r--r--  1 deepthought  deepthought  999 Sep 21 18:26 only_z.c
 
= only_z =======================================================================
$> gcc -Wextra -Wall -Werror only_z.c -o user_exe 
only_z.c:20:1: error: return type of 'main' is not 'int' [-Werror,-Wmain-return-type]
void    main(void)
^
only_z.c:20:1: note: change return type to 'int'
void    main(void)
^~~~
int
1 error generated.

Could not compile 'user_exe'
Grade: 0

= Final grade: 0 ===============================================================
